# rwkv-peft-simple

./: .gitignore  README.md  REFACTOR_PLAN.md  doc_for_refactoring_work.md  main.py  pyproject.toml  train.py
.cursor/rules/: add-to-changelog.mdc  bug-fix.mdc  check.mdc  clean.mdc  context-prime.mdc  create-command.mdc  create-docs.mdc
configs/disha/: model.toml  train.toml
configs/lora/: train.toml
configs/pissa/: train.toml
configs/prepare/: file.toml  train.toml
configs/pretrain/: file.toml  model.toml  train.toml
configs/state_tuning/: file.toml  model.toml  train.toml
scripts/: train.sh
src/configs/: _README.md  configs.py  file.py  model.py  train.py
src/configs/disha/: train.py
src/configs/lora/: file.py  train.py
src/configs/pissa/: model.py  train.py
src/configs/prepare/: file.py  model.py  train.py
src/configs/pretrain/: file.py  train.py
src/configs/state_tuning/: file.py  model.py  train.py
src/datasets/: _README.md  binidx.py  dataset_pt.py  dataset_sft.py  mask.py  rwkv_sft.py
src/infering_loop/: _README.md  inferer.py  inferer_rwkv7_batch.py
src/merge/: MODULE_SUMMARY.md  merge.py  merge_disha.py  merge_lora.py  merge_pissa.py  merge_state.py
src/model/: _README.md  light_rwkv.py  state.py  state_decoder.py
src/model/cuda/: wkv7_cuda.cu  wkv7_op.cpp  wkv7s.cu
src/model/operator/: _README.md  cuda.py  fla.py  rwkvop.py  triton.py
src/model/peft/: MODULE_SUMMARY.md  linear.py  peft_loading.py
src/training_loop/: _README.md  args_type.py  light_rwkv.py  trainer.py
src/utils/: _README.md  datasets.py  tokenizer.py
(+16 files in other folders)
